@@ -1,4 +1,5 @@
 06.jan (ws)
+      - add SlurSegment into "inspector"
       - more slur optimizations
        (la)
       - enable time signature deletion in timesig palette
